feat: Picocli migration, Jackson YAML resummarize, re-summarized posts, CLAUDE.md
Migrated DigestHelper to Picocli subcommands and Jackson YAML for resummarize.
Re-summarized all 6 posts with improved prompt tone. Added CLAUDE.md and digest logs.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>